# ESP32_template

./: CMakeLists.txt
components/c_component/: CMakeLists.txt
components/c_component/inc/: c_component.h
components/c_component/src/: c_component.c
components/global_config/: CMakeLists.txt
components/global_config/inc/: i2c_master.h  pins.h
components/global_config/src/: i2c_master.c
components/test_component/: CMakeLists.txt
components/test_component/inc/: TestComponent.hpp
components/test_component/src/: TestComponent.cpp
main/: CMakeLists.txt  main.cpp
